# reviro-test-task

./: .env-example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
core/: settings.py  urls.py
management/: admin.py  models.py  paginators.py  serializers.py  urls.py  views.py
tests/: test_api.py
users/: models.py
